all change eptill5

--- a/package.json
+++ b/package.json
@@ -1,19 +1,17 @@
 {
   "name": "food-delivey-app-01",
   "version": "1.0.0",
-  "description": "Food delivery app",
+  "description": "Food Delivey App -01",
+  "main": "App.js",
   "scripts": {
-    "start":"parcel index.html",
-    "build":"parcel build index.html",
+    "start": "parcel index.html",
+    "build": "parcel build index.html",
     "test": "jest"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/Aashu00007/food-delivery-app-01.git"
   },
-  "keywords": [
-    "food"
-  ],
   "author": "Ashutosh",
   "license": "ISC",
   "bugs": {
@@ -21,10 +19,11 @@
   },
   "homepage": "https://github.com/Aashu00007/food-delivery-app-01#readme",
   "devDependencies": {
-    "parcel": "^2.13.3"
-  } ,
+    "parcel": "^2.13.3",
+    "process": "^0.11.10"
+  },
   "dependencies": {
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
-  }  
- }
+  }
+}
